# agent

./: .eslintignore  .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  sha.sh  sha_common.sh  sha_style.sh  todo.md  tsconfig.ide.json  tsconfig.json  xx.yaml
.claude/: settings.json
.claude/skills/dao-review/: SKILL.md
.claude/skills/dao-tdd-dev/: SKILL.md
.dao/ref/: ref.lock.json
.dao/ref/github.com/DefinitelyTyped/DefinitelyTyped/: 1.9.2  22.0.0  5.0.2  8.18.1  8.5.10
.dao/ref/github.com/agentclientprotocol/agent-client-protocol/: v0.11.3
.dao/ref/github.com/agentclientprotocol/typescript-sdk/: v0.16.1
.dao/ref/github.com/anomalyco/opencode/: dev
.dao/ref/github.com/badlogic/pi-mono/: v0.57.1  v0.61.0
.dao/ref/github.com/chalk/chalk/: v5.6.2
.dao/ref/github.com/eemeli/yaml/: v2.8.3
.dao/ref/github.com/eslint/eslint/: v9.21.0
.dao/ref/github.com/facebook/yoga/: v3.2.1
.dao/ref/github.com/github/docs/: main
.dao/ref/github.com/google-gemini/gemini-cli/: v0.34.0-preview.0
.dao/ref/github.com/markedjs/marked/: v17.0.4
.dao/ref/github.com/microsoft/TypeScript/: 5.0.0
.dao/ref/github.com/microsoft/node-jsonc-parser/: v3.3.1
.dao/ref/github.com/nodeca/js-yaml/: 4.1.1
.dao/ref/github.com/open-telemetry/opentelemetry-js/: 0.213.0  1.40.0  v1.9.0  v2.6.0
.dao/ref/github.com/pinojs/pino/: v10.3.1
.dao/ref/github.com/pinojs/pino-pretty/: v13.1.3
.dao/ref/github.com/privatenumber/tsx/: v4.7.0
.dao/ref/github.com/sindresorhus/get-east-asian-width/: v1.5.0
.dao/ref/github.com/tj/commander.js/: v14.0.1
.dao/ref/github.com/typescript-eslint/typescript-eslint/: v8.25.0
.dao/ref/github.com/vadimdemedes/yoga-layout-prebuilt/: v1.10.0
.dao/ref/github.com/vitest-dev/docs-cn/: v3
.dao/ref/github.com/vitest-dev/vitest/: v3.0.0  v4.1.2
.dao/ref/github.com/vuejs/core/: v3.5.31
.dao/ref/github.com/websockets/ws/: 8.16.0  8.19.0
docs/: ROADMAP.md  dev-flow.md
docs/issues/49-git-workflow/: 2026-05-11-sha-sh-工作流移植评估-与-可配置-工作流引擎设计.md  2026-05-11-工作前问题对齐.md
docs/xxui/: 2026-05-04_ai_chatgpt_discussion_draft.md  2026-05-04_ai_pi_api_design_v0.2.md  2026-05-04_user_qa_01.md  2026-05-05_ai_codex_development_spec_v0.1.md  2026-05-05_ai_pi_analysis_and_qa.md  2026-05-05_mixed_codex_qa.md  2026-05-05_user_original_ideas.md  README.md
research/acp/: AGENTS.md
research/acp/docs/: gemini-acp.gen.md  index.gen.md
research/github-flow/: README.md
scripts/: git-hook.sh
todo/: style.md
ui/py-xxui/: pyproject.toml
ui/py-xxui/src/xxui/: base_app.py  debug.py
ui/py-xxui/src/xxui/providers/: panel.py
ui/py-xxui/tests/: test_cell.py  test_marimo.py
xxui/py-xxui/: AGENTS.md  pyproject.toml  sha.sh
xxui/py-xxui/.agents/skills/panel-params/: SKILL.md
xxui/py-xxui/docs/py-xxui-init-design/: 2026-05-04_ai_chatgpt_discussion_draft.md  2026-05-04_ai_pi_api_design_v0.2.md  2026-05-05_ai_codex_development_spec_v0.1.md  2026-05-05_ai_pi_analysis_and_qa.md  2026-05-05_user_original_ideas.md  README.md
xxui/py-xxui/examples/: panel_demo.pn.py
xxui/py-xxui/src/xxui/: __init__.py  base_app.py  debug.py  scheduler.py  scope.py  signal.py
xxui/py-xxui/src/xxui/providers/: marimo.py  panel.py
xxui/py-xxui/tests/: browser_test_app.py  conftest.py  test_base_app.py  test_browser.py  test_cell.py  test_debug.py  test_panel.py  test_panel_param_coverage.py  test_scheduler.py  test_scope.py  test_signal.py
xxui/py-xxui/tools/: check_panel_params.py
xxui/ts-xxui/: package-lock.json  package.json  sha.sh  tsconfig.json
xxui/ts-xxui/docs/: ref-pitui-interfaces.md
xxui/ts-xxui/docs/ts-xxui-init-design/: 2026-05-12_ts-xxui-design-v0.2.md  2026-05-12_ts-xxui-sessions.md
xxui/ts-xxui/examples/: chat_demo.ts  counter.ts  reactive_demo.ts
xxui/ts-xxui/src/: cell.ts  components.ts  index.ts  scheduler.ts  scope.ts  signal.ts
xxui/ts-xxui/src/providers/: pi-tui.ts
xxui/ts-xxui/tests/: cell.test.ts  components.test.ts  context.test.ts  scheduler.test.ts  scope.test.ts  signal.test.ts
xxui/ts-xxui/tools/: check-pitui.ts
