[project]
name = "xxui"
version = "0.1.0"
description = "xxui - A thin reactive wrapper over UI frameworks."
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.2",
    "panel>=1.8.10",
    "asyncio>=4.0.0",
    "param>=2.3.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "playwright>=1.57.0",
    "pytest-playwright>=0.7.0",
    "jupytext>=1.19.1",
    "jupyterlab>=4.5.6",
    "pip>=25.3",
    "jupyterlab-lsp>=5.3.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "pyright>=1.1.409",
]

[tool.uv]
package = true

# `uv python install`的不是官网文件，而是这个项目打包的便携版: https://github.com/astral-sh/python-build-standalone/
# 镜像较少，参考: https://github.com/tuna/issues/issues/2125
# 已知镜像站点：
# - https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/
# - https://registry.npmmirror.com/-/binary/python-build-standalone/
# - https://gh-proxy.com/github.com/indygreg/python-build-standalone/releases/download
# 镜像下载示例：
# - uv python install --mirror https://registry.npmmirror.com/-/binary/python-build-standalone/ 3.12
# - UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/ uv python install 3.12
# pyproject.toml config ref: https://docs.astral.sh/uv/reference/settings/#python-install-mirror
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

# ========== Ruff 配置 ==========
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",    # line too long (交给 formatter 处理)
    "B008",    # function call in default argument
    "TC003",   # stdlib import into type-checking block (运行时需要)
    "UP046",   # Generic subclass (兼容旧写法)
]

[tool.ruff.lint.isort]
known-first-party = ["xxui"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ========== Pyright 配置 ==========
[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["src", "tests", "examples"]
reportMissingParameterType = true
reportUnknownParameterType = true

# ========== Pytest 配置 ==========
[tool.pytest.ini_options]
markers = ["browser: 需要 headless browser 的测试"]
testpaths = ["tests"]

# ========== Marimo 配置 ==========
[tool.marimo.runtime]  
# auto_instantiate = true
show_tracebacks = true
